hphp/hack/test/typecheck/keyedcontainer_immutable2.php.exp
File "keyedcontainer_immutable2.php", line 4, characters 3-12:
You cannot mutate this (Typing[4011])
File "keyedcontainer_immutable2.php", line 3, characters 15-45:
This is an object of type KeyedContainer<arraykey, mixed>
