hphp/hack/test/typecheck/keyedcontainer_immutable2.php
<?hh // strict

function test(KeyedContainer<mixed, mixed> $kc): void {
  $kc[0] = 1;
}
